fix: css visibility of approved attestation

--- a/src/components/AttestedClaimVerificationView/AttestedClaimVerificationView.scss
+++ b/src/components/AttestedClaimVerificationView/AttestedClaimVerificationView.scss
@@ -32,7 +32,7 @@
     width: 20%;
     text-align: left;
 
-    &.revoked {
+    &.unverified {
 
       &:before {
         @include icon($icon-times);
@@ -41,7 +41,7 @@
       }
     }
 
-    &.approved {
+    &.verified {
 
       &:before {
         @include icon($icon-check);
